--- a/src/pages/blog.ejs
+++ b/src/pages/blog.ejs
@@ -1,7 +1,7 @@
 <div id="hiveblokz"></div>
 <script
  hiveuser="sn0n" 
- frontend="leofinance.io" 
+ frontend="personal.community" 
  apinode="api.hive.blog" 
  src="../js/hiveblokz.js" 
   type="text/javascript"></script>
