--- a/src/partials/nav.ejs
+++ b/src/partials/nav.ejs
@@ -8,7 +8,7 @@
 <div class="lighterBackground">
 
 
-  <p class="sideBarTitle">Support Me! <br /><small>and blokz by extension</small></p>
+  <p class="sideBarTitle">Ad Space: <br /><small>help out sn0n.com and blokz by extension</small></p>
   <span class="sideBarText">
     No Bitcoin wallet? No way to get into crypto? No problem!! sign up with services below using these referral links,
     where we both
