--- a/src/pages/playground.ejs
+++ b/src/pages/playground.ejs
@@ -122,7 +122,7 @@ let user;
 
 
          
-
+/*
    //      curl -s --data '{"jsonrpc":"2.0", "method":"database_api.find_accounts", "params": {"accounts":["hiveio"]}, "id":1}' https://api.hive.blog
    let apinode = "https://api.deathwing.me"
    let hiveuser = "sn0n"
@@ -140,4 +140,7 @@ let user;
     });
 }
 fetchPosts();
+
+*/
+console.log('all done')
 </script>
