whoa, a whole new look, ish

--- a/src/partials/nav.ejs
+++ b/src/partials/nav.ejs
@@ -1,4 +1,4 @@
-<div>
+<!-- <div>
   <p class="sideBarTitle">Extras:</p>
   <ul>
     <li><a href="../playground">&rsaquo; Playground</a></li>
@@ -19,7 +19,7 @@
       sign up and we'll both get $10/ free with your first $100/ transaction.
       They also have a crypto earn program, where you can earn about $45 for free by watching some short videos to learn
       more about various cryptocurrencies.
-      <!-- find out more here: -->
+    
     </p>
     <p><a href="https://www.coinbase.com/join/forake_z">Join coinbase</a></p>
     <p>
@@ -34,3 +34,4 @@
 
     
 </div>
+-->
