--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -1,16 +1,27 @@
+html {
+font-size: clamp(1em, 0.909em + 0.45vmin, 1.25em);
+font-family: system-ui;
+max-width: 70ch;
+text-align: center;
+margin: auto;
+overflow-wrap: break-word;
+}
+
+body :not(:is(h1,h2,h3,h4,h5,h6)) {
+  line-height: 1.75;
+  }
+
+
 body {
   color: black;
   background-color: rgb(240, 240, 240);
-  font-family: verdana, helvetica, arial, sans-serif;
-  font-size: 71%;
+
   /* Enables font size scaling in MSIE */
   margin: 0;
   padding: 0;
 }
 
-html>body {
-  font-size: 8.5pt;
-}
+
 
 .doNotDisplay {
   display: none;
@@ -35,7 +46,6 @@ html>body {
 }
 
 .headerTitle {
-  font-size: 337%;
   font-weight: normal;
   margin: 0 0 0 4mm;
   padding: 0.25ex 0;
@@ -59,7 +69,8 @@ html>body {
 
 
 #side-bar {
-  width: 15em;
+  visibility: hidden;
+  width: 20ch;
   float: left;
   clear: left;
   border-right: 1px solid rgb(153, 153, 153);
@@ -125,7 +136,6 @@ html>body {
 
 /* ##### Main Copy ##### */
 #main-copy {
-  max-width: 70ch;
   color: black;
   background-color: white;
   text-align: justify;
@@ -133,7 +143,7 @@ html>body {
   min-height: 100vh;
   padding: 0.5mm 5mm 5mm 5mm;
   border-left: 1px solid rgb(153, 153, 153);
-  margin: 0 0 0 15em;
+  margin: 0;
 }
 
 #main-copy p {
@@ -157,7 +167,6 @@ html>body {
 }
 
 #posthead {
-  font-size: 2em;
   font-weight: bolder;
   padding-top: 1em;
 }
@@ -166,34 +175,11 @@ html>body {
   padding: 2em;
 }
 
-#post h1 {
-  font-size: 1.5em;
-}
-
-#post h2 {
-  font-size: 1.4em;
-}
-
-#post h3 {
-  font-size: 1.3em;
-}
-
-#post h4 {
-  font-size: 1.2em;
-}
-
-#post h5 {
-  font-size: 1.1em;
-}
-
-#post h6 {
-  font-size: 1em;
-}
 
 #footer {
   color: white;
   background-color: rgb(100, 135, 220);
-  font-size: 91%;
+
   margin: 0;
   padding: 1em 2.5mm 22.5ex 2.5mm;
   clear: both;
@@ -213,7 +199,6 @@ html>body {
 #main-copy .topOfPage {
   color: white;
   background-color: transparent;
-  font-size: 91%;
   font-weight: bold;
   text-decoration: none;
   margin: 2.5ex 1ex 0 0;
