glitch in the matrix

--- a/src/pages/playground.ejs
+++ b/src/pages/playground.ejs
@@ -144,3 +144,6 @@ fetchPosts();
 */
 console.log('all done')
 </script>
+
+
+<a class="topOfPage" href="#top" title="Go to the top of this page">^ TOP</a>
