--- a/src/partials/footer.ejs
+++ b/src/partials/footer.ejs
@@ -2,7 +2,7 @@
 
 
   <div class="right">
-    <a href="https://sn0n.github.io/">http://sn0n.github.io/</a><br />
+    <a href="https://sn0n.com/">http://sn0n.com/</a><br />
     This website is <a href="http://copyfree.org/" target="_blank">Copyfree</a>, or was it unlicense(?), Idk, either way ....<br />
     This is Life. It's just a game, have fun. <br />
    Words, Pictures, Things &amp; Such 
@@ -10,8 +10,8 @@
    I am NOT responsible for any decisions made by you or anyone else. Your actions are your own.   
   
    <div style="text-align: right">Snahn ip (@sn0n)<br />  
-   <a href="/contact/">Contact Info</a> for:<br />
-    - Consultation &amp; Freelance Availability -  </div>
+   <a href="/contact/">Contact Info</a> <br />
+    - Available for Consultation &amp; Freelance work  -  </div>
   </div>
 
 
