--- a/src/pages/blog.ejs
+++ b/src/pages/blog.ejs
@@ -5,3 +5,5 @@
  apinode="api.hive.blog" 
  src="../js/hiveblokz.js" 
   type="text/javascript"></script>
+
+<a class="topOfPage" href="#top" title="Go to the top of this page">^ TOP</a>
