--- a/src/partials/header.ejs
+++ b/src/partials/header.ejs
@@ -20,7 +20,8 @@
 
     <div class="midHeader">
         <h1 class="headerTitle">
-            <%= site.title %>
+            <div style="font-family: Roboto,Helvetica Neue,Helvetica,Arial,sans-serif;">รռ0̸̢̲͉̹̙̪̞̮͊̾͛ͅռ was here</div>
+
         </h1>
     </div>
 
