--- a/src/pages/playground.ejs
+++ b/src/pages/playground.ejs
@@ -1,5 +1,12 @@
 
 <!-- <h1>#DriveIdeas2Creation in a sandbox</h1> -->
+<canvas id="blokzCanva"></canvas>
+  
+  <div id="game">
+  <canvas id="canvas"></canvas>
+</div>
+<script defer src="../js/hiveland.js"></script>
+
 
 <script src="../js/aes256.min.js?ver=5.2"></script>
 <script src="../js/wordlist.js?ver=5.2"></script>
