--- a/src/partials/footer.ejs
+++ b/src/partials/footer.ejs
@@ -11,7 +11,7 @@
   
    <div style="text-align: right">Snahn ip (@sn0n)<br />  
    <a href="/contact/">Contact Info</a> <br />
-    - Available for Consultation &amp; Freelance work  -  </div>
+    - Available for Consultation &amp; Freelance work  <a href="../playground/">-</a>  </div>
   </div>
 
 
