--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -230,10 +230,9 @@ canvas {
   /* For fully standards-compliant user agents */
 }
 
-pre {
-  outline: 1px solid #ccc;
+.pre {
+  outline: 1px solid #000;
   padding: 5px;
-  background-color: #D1D1D0;
   overflow: auto;
   font-family: 'Monaco', monospace;
   padding: 1em 1em;
@@ -242,6 +241,7 @@ pre {
 
 .string {
   color: green;
+  overflow-wrap: break-word;
 }
 
 .number {
