api.hextech.group migration

--- a/src/pages/blog.ejs
+++ b/src/pages/blog.ejs
@@ -2,7 +2,7 @@
 <script
  hiveuser="sn0n" 
  frontend="personal.community" 
- apinode="api.hive.blog" 
+ apinode="api.hextech.group" 
  src="../js/hiveblokz.js" 
   type="text/javascript"></script>
 
