--- a/src/pages/blog.ejs
+++ b/src/pages/blog.ejs
@@ -3,7 +3,7 @@
  hiveuser="sn0n" 
  frontend="personal.community" 
  apinode="api.hextech.group" 
- src="../js/hiveblokz.js" 
+ src="../js/hiveblokz.js?version=a001" 
   type="text/javascript"></script>
 
 <a class="topOfPage" href="#top" title="Go to the top of this page">^ TOP</a>
