--- a/src/pages/blog.ejs
+++ b/src/pages/blog.ejs
@@ -1,9 +1,9 @@
-loading data <br />
+loading data..<br />
 <div id="hiveblokz"></div>
 <script
  hiveuser="sn0n" 
  frontend="personal.community" 
- apinode="api.deathwing.me" 
+ apinode="api.hextech.group" 
  src="../js/hiveblokz.js?version=a001" 
   type="text/javascript"></script>
 
