--- a/src/pages/playground.ejs
+++ b/src/pages/playground.ejs
@@ -1,8 +1,7 @@
 
 <!-- <h1>#DriveIdeas2Creation in a sandbox</h1> -->
   
-<script defer src="../js/hiveland.js"></script>
-
+<script defer src="../js/sn0n.js"></script>
 <script src="../js/pocketbase.umd.js"></script>
 <script src="../js/aes256.min.js?ver=5.2"></script>
 <script src="../js/wordlist.js?ver=5.2"></script>
