testings and things

--- a/src/pages/mailinglist.ejs
+++ b/src/pages/mailinglist.ejs
@@ -12,7 +12,7 @@
 
 <script>
 // playing with pocketbase
-const client = new PocketBase('https://pb.blokz.io/');
+const client = new PocketBase('https://pb.sn0n.com/');
 
 function signup() {
  let email = document.getElementById("email").value;
