--- a/src/pages/playground.ejs
+++ b/src/pages/playground.ejs
@@ -63,7 +63,7 @@ let user;
                 "package": encrypted
           
     }
-    client.records.create('demo', {
+    client.records.create('playground', {
            "blokzbox": blokzchain_json
 });
     console.log("json" + JSON.stringify(blokzchain_json))
